<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="dasboard_want_to_remember">What do yo want to remember to do?</string>
    <string name="dashboard_want_to_it">When do you want to it?</string>
    <string name="dasboard_what_time">At what time?</string>
    <string name="dashboard_take_my_pill">Take my pill</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="btn_set_time">Hora</string>
    <string name="btn_save">Agregar</string>
    <string name="btn_ok">Eliminar</string>
    <string name="msg_deleted">Eliminado</string>
    <string name="cancel_button">Cancelar</string>
    <string name="msg">MSG</string>
    <string name="title">Title</string>
</resources>